package com.skplanet.storeplatform.sac.client.product.vo;

option java_package = "com.skplanet.storeplatform.sac.client.product.vo";

import "intfmessage/common/CommonResponseProto.proto";
import "intfmessage/device/DeviceProto.proto";

message ProvisionDeviceProfileResult{
    required com.skplanet.storeplatform.sac.client.intfmessage.common.vo.CommonResponse commonRes = 1;    // 공통 Response
    required com.skplanet.storeplatform.sac.client.intfmessage.device.vo.Device device = 2;
}
